--- a/KopiPedia/css/index.css
+++ b/KopiPedia/css/index.css
@@ -6,8 +6,8 @@
 body {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
     background-color: #2d2d2d05 ;
+    overflow-x: hidden;
 }
 a {
     text-decoration: none;
@@ -15,14 +15,30 @@ a {
 }
 .container_menu {
     width: 100%;
-    height: 10vh;
+    height: auto;
     background-color: gainsboro;
     display: flex;
     align-items: center;
     justify-content: center;
-    
+    padding: 1% 0;
+    box-sizing: border-box;
+}
+.container_menu img {
+    display: block;
+    width: 20vw;
+    height: 15vh;
+}
+.burger div {
+    width: 20px;
+    height: 2px;
+    background-color: black;
+    margin: 5px;
+    display: none;
 }
 .container_secondary_menu {
+    width: 100%;
+}
+.container_secondary_menu div{
     width: 100%;
     height: 7vh;
     display: flex;
@@ -54,7 +70,7 @@ a {
 }
 .container_header_jumbotron .container_card_jumbotron {
     width: 100%;
-    height: 45vh;
+    height: auto;
     display: flex;
     justify-content: space-around;
     position: absolute;
@@ -164,7 +180,7 @@ a {
     height: 100%;
 }
 .container_hubkami .container_desc {
-    width: 60%;
+    width: 100%;
     height: 100%;
     padding: 3%;
     box-sizing: border-box;
@@ -209,12 +225,145 @@ a {
 }
 .carousel_slider .img .content {
     width: 20%;
-    height: 35vh;
-    background-color: grey;
+    height: auto;
+    text-align: center;
+}
+.carousel_slider .img .content img {
+    width: 100%;
 }
 .container_footer {
     width: 100%;
     height: 15vh;
     background-color: gainsboro;
     margin-top: 5%;
+}
+.container_secondary_menu .menu_active {
+    opacity: 100%;
+    transition: 0.4s;
+    
+}
+@media only screen and (max-width: 480px) {
+    
+    .container_menu {
+        justify-content: space-between;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    
+    .container_menu img {
+        width: 30vw;
+        height: 10vh;
+    }
+    .container_secondary_menu {
+        width: 100%;
+    }
+    .container_secondary_menu div {
+        flex-direction: column;
+        height: 75vh;
+        width: 100%;
+        background-color: grey;
+        position: absolute;
+        z-index: 1;
+        /* transform: translateX(100%); */
+        transition: transform 0.5s ease-in;
+        opacity: 0;
+        transition: 0.4s;
+    }
+    .container_menu .burger div {
+        display: block;
+    }
+    .container_header_jumbotron {
+        width: 100%;
+        height: auto;
+    }
+    .container_header_jumbotron .container_jumbotron {
+        height: 50vh;
+        
+    }
+    .container_header_jumbotron .container_card_jumbotron {
+        flex-direction: column;
+        align-items: center;
+        position: static;
+        gap: 10px;
+        margin: 5% 0;
+    }
+    .container_header_jumbotron .container_card_jumbotron .card {
+        width: 65%;
+        height: 45vh;
+    }
+    .container_content {
+        margin-top: 10%;
+    }
+    .container_content .container_kopikukaukita {
+        
+    }
+    .container_content .container_both_content {
+        flex-direction: column;
+        align-items: center;
+    }
+    .container_content .container_both_content .container_left_content {
+        width: 100%;
+        text-align: center;
+    }
+    .container_content .container_both_content .container_left_content h1 {
+        font-size: 30px;
+    }
+    .container_both_content .container_left_content .content .desc_content_1 {
+        flex-direction: column;
+        gap: 15px;
+        align-items: center;
+        text-align: center;
+        padding-bottom: 5%;
+        box-sizing: border-box;
+    }
+    .container_both_content .container_right_content {
+        width: 100%;
+    }
+    .carousel_container {
+
+    }
+    .carousel_container i {
+        font-size: 15px;
+        background-color: white;
+        color: grey;
+    }
+    #nextBtn {
+        top: 50%;
+        right: 3%;
+    }
+    #prevBtn {
+        top: 50%;
+        left: 3%;
+    }
+    .carousel_container .carousel_slider {
+
+    }
+    .carousel_slider .img .content {
+        width: 30%;
+        height: auto;
+        text-align: center;
+        font-size: 10px;
+    }
+    .carousel_slider .img .content h3 {
+        margin-top: 5px;
+    }
+    .container_hubkami {
+        flex-direction: column;
+        height: auto;
+    }
+    .container_hubkami .container_image {
+        width: 100%;
+    }
+    .container_hubkami .container_desc {
+        text-align: center;
+    }
+    .container_hubkami h1 {
+        font-size: 25px;
+    }
+    .container_hubkami h2 {
+        font-size: 20px;
+    }
+    .container_hubkami h3 {
+        font-size: 15px;
+    }
 }
