--- a/KopiPedia/css/index.css
+++ b/KopiPedia/css/index.css
@@ -66,7 +66,8 @@ a {
 .container_header_jumbotron .container_jumbotron {
     width: 100%;
     height: 75vh;
-    background-color: grey;
+    background-image: url('../images/hero.jpg');
+    background-size: cover;
 }
 .container_header_jumbotron .container_card_jumbotron {
     width: 100%;
@@ -243,7 +244,9 @@ a {
     
 }
 @media only screen and (max-width: 480px) {
-    
+    .container_header_jumbotron .container_jumbotron {
+        background-position-x: 45%;
+    }
     .container_menu {
         justify-content: space-between;
         padding-left: 5%;
