--- a/KopiPedia/css/coffeeshopbandung.css
+++ b/KopiPedia/css/coffeeshopbandung.css
@@ -15,14 +15,30 @@ a {
 }
 .container_menu {
     width: 100%;
-    height: 10vh;
+    height: auto;
     background-color: gainsboro;
     display: flex;
     align-items: center;
     justify-content: center;
-    
+    padding: 1% 0;
+    box-sizing: border-box;
+}
+.container_menu img {
+    display: block;
+    width: 20vw;
+    height: 15vh;
+}
+.burger div {
+    width: 20px;
+    height: 2px;
+    background-color: black;
+    margin: 5px;
+    display: none;
 }
 .container_secondary_menu {
+    width: 100%;
+}
+.container_secondary_menu div{
     width: 100%;
     height: 7vh;
     display: flex;
@@ -160,4 +176,83 @@ a {
     padding: 3% 3%;
     box-sizing: border-box;
     margin-bottom: 10%;
+}
+.container_secondary_menu .menu_active {
+    display: flex;
+    transition: 0.4s;
+    
+}
+@media only screen and (max-width: 480px) {
+    .container_menu {
+        justify-content: space-between;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    .container_menu img {
+        width: 32vw;
+        height: 8vh;
+    }
+    .container_secondary_menu {
+        width: 100%;
+    }
+    .container_secondary_menu div {
+        flex-direction: column;
+        height: 75vh;
+        width: 100%;
+        background-color: grey;
+        position: absolute;
+        z-index: 1;
+        /* transform: translateX(100%); */
+        transition: transform 0.5s ease-in;
+        display: none;
+        transition: 0.4s;
+        z-index: 4;
+    }
+    .container_menu .burger div {
+        display: block;
+    }
+    .carousel_container {
+        width: 100%;
+        margin: 5% 0;
+    }
+    .carousel_container i {
+        font-size: 20px;
+    }
+    .carousel_container .carousel_slider .img img {
+        height: 45vh;
+    }
+    .carousel_container .carousel_slider h2 {
+        font-size: 15px;
+    }
+    .container_content .container_both_content {
+        flex-direction: column;
+        align-items: center;
+    }
+    .container_content .container_both_content .container_left_content {
+        width: 100%;
+        text-align: center;
+    }
+    .container_content .container_both_content .container_left_content h1 {
+        font-size: 30px;
+    }
+    .container_both_content .container_left_content .content .desc_content_1 {
+        flex-direction: column;
+        gap: 15px;
+        align-items: center;
+        text-align: center;
+        padding-bottom: 5%;
+        box-sizing: border-box;
+    }
+    .container_both_content .container_right_content {
+        width: 100%;
+    }
+    .container_left_content .container_top_cafe {
+        gap:30px;
+        margin: 5% auto;
+    }
+    .container_top_cafe .cafe {
+        width: 40vw;
+        height: 35vh;
+    }
+    
 }
